Swagger tweak, removing manually built postman build
